[No-card][Brindha | Sahiti] Add. api calls to get modules and topics for admin